syntax = "proto3";

package course;

option go_package = "./proto";

service Course {
    rpc CreateCourse (CourseCreateBody) returns (CourseBody) {}
    rpc GetAllCourses (GetAllCourseBody) returns (CourseBodyArr) {}
    rpc GetCourseByCourseId (GetCourseRequest) returns (CourseBody) {}
    rpc UpdateCourse (CourseRequestUpdateBody) returns (CourseBody) {}
    rpc DeleteCourse (GetCourseRequest) returns (CourseBody) {}
}

message CourseCreateBody {
    string course_id = 1; 
    string course_name = 2;
    string course_codename = 3;
}

message GetAllCourseBody {}

message GetCourseRequest {
    string course_id = 1;
}

message CourseRequestUpdateBody {
    string course_id = 1;
    CourseUpdateBody body = 2;
}
  

message CourseBody {
    string _id = 1;
    string course_id = 2;
    string course_name = 3;
    string course_codename = 4;
    repeated string exam_ids = 5;
}

message CourseUpdateBody {
    optional string course_id = 1;
    optional string course_name = 2;
    optional string course_codename = 3;
    repeated string exam_ids = 4;
}

message CourseBodyArr {
    repeated CourseBody messages = 1;
}
